# managarr

./: .actrc  .cz.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.arm64  LICENSE  Makefile  PKGBUILD  README.md  SECURITY.md  codecov.yml  justfile  managarr.rb  package-lock.json  rustfmt.toml  typos.toml
.cargo-husky/hooks/: pre-commit  pre-push
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  enhancement.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: check.yml  docker-multi-platform-test.yml  release-major.yml  release-minor.yml  release-patch.yml  release.yml  test-chocolatey-deploy.yml  test-homebrew-release.yml  test-publish-scoop-bucket.yml  test.yml
.helix/: config.toml
deployment/chocolatey/: chocolateyinstall.ps1.template  managarr.nuspec.template  packager.py
deployment/homebrew/: managarr.rb.template  packager.py
deployment/scoop/: managarr.json  managarr.json.template
proc_macros/enum_display_style_derive/: Cargo.toml
proc_macros/enum_display_style_derive/src/: lib.rs  macro_models.rs
proc_macros/validate_theme_derive/: Cargo.toml
proc_macros/validate_theme_derive/src/: lib.rs
proptest-regressions/handlers/: handler_proptest.txt  table_handler_tests.txt
proptest-regressions/ui/: ui_property_tests.txt
src/: builtin_themes.rs  builtin_themes_tests.rs  logos.rs  main.rs  utils.rs  utils_tests.rs
src/app/: app_tests.rs  context_clues.rs  context_clues_tests.rs  key_binding.rs  key_binding_tests.rs  mod.rs  models.rs  radarr.rs  radarr_test_utils.rs  radarr_tests.rs
src/app/lidarr/: lidarr_context_clues.rs  lidarr_context_clues_tests.rs  lidarr_tests.rs  mod.rs
src/app/radarr/: mod.rs  radarr_context_clues.rs  radarr_context_clues_tests.rs  radarr_key_mappings.rs  radarr_tests.rs
src/app/sonarr/: mod.rs  sonarr_context_clues.rs  sonarr_context_clues_tests.rs  sonarr_tests.rs
src/cli/: cli_tests.rs  mod.rs
src/cli/lidarr/: add_command_handler.rs  add_command_handler_tests.rs  delete_command_handler.rs  delete_command_handler_tests.rs  edit_command_handler.rs  edit_command_handler_tests.rs  get_command_handler.rs  get_command_handler_tests.rs  lidarr_command_tests.rs  list_command_handler.rs  list_command_handler_tests.rs  manual_search_command_handler.rs  manual_search_command_handler_tests.rs  mod.rs  refresh_command_handler.rs  refresh_command_handler_tests.rs  trigger_automatic_search_command_handler.rs  trigger_automatic_search_command_handler_tests.rs
src/cli/radarr/: add_command_handler.rs  add_command_handler_tests.rs  delete_command_handler.rs  delete_command_handler_tests.rs  edit_command_handler.rs  edit_command_handler_tests.rs  get_command_handler.rs  get_command_handler_tests.rs  list_command_handler.rs  list_command_handler_tests.rs  mod.rs  radarr_command_tests.rs  refresh_command_handler.rs  refresh_command_handler_tests.rs
src/cli/sonarr/: add_command_handler.rs  add_command_handler_tests.rs  delete_command_handler.rs  delete_command_handler_tests.rs  download_command_handler.rs  download_command_handler_tests.rs  edit_command_handler.rs  edit_command_handler_tests.rs  get_command_handler.rs  get_command_handler_tests.rs  list_command_handler.rs  list_command_handler_tests.rs  manual_search_command_handler.rs  manual_search_command_handler_tests.rs  mod.rs  refresh_command_handler.rs  refresh_command_handler_tests.rs  sonarr_command_tests.rs  trigger_automatic_search_command_handler.rs  trigger_automatic_search_command_handler_tests.rs
src/event/: input_event.rs  key.rs  key_tests.rs  mod.rs
src/handlers/: handler_proptest.rs  handler_test_utils.rs  handlers_tests.rs  keybinding_handler.rs  keybinding_handler_tests.rs  mod.rs  radarr_handler.rs  table_handler.rs  table_handler_tests.rs
src/handlers/lidarr_handlers/: lidarr_handler_tests.rs  mod.rs
src/handlers/radarr_handlers/: add_movie_handler.rs  add_movie_handler_tests.rs  collection_details_handler.rs  collection_details_handler_tests.rs  delete_movie_handler.rs  delete_movie_handler_tests.rs  edit_collection_handler.rs  edit_collection_handler_tests.rs  edit_movie_handler.rs  edit_movie_handler_tests.rs  mod.rs  movie_details_handler.rs  movie_details_handler_tests.rs  radarr_handler_test_utils.rs  radarr_handler_tests.rs  system_details_handler.rs  system_details_handler_tests.rs
src/handlers/sonarr_handlers/: mod.rs  sonarr_handler_test_utils.rs  sonarr_handler_tests.rs
src/models/: lidarr_models.rs  lidarr_models_tests.rs  mod.rs  model_tests.rs  radarr_models.rs  radarr_models_tests.rs  servarr_models.rs  servarr_models_tests.rs  sonarr_models.rs  sonarr_models_tests.rs  stateful_list.rs  stateful_list_tests.rs  stateful_table.rs  stateful_table_tests.rs  stateful_tree.rs  stateful_tree_tests.rs
src/models/servarr_data/: data_test_utils.rs  mod.rs  modals.rs  modals_tests.rs  radarr_data.rs  radarr_data_tests.rs  radarr_test_utils.rs  servarr_data_tests.rs
src/network/: lidarr_network.rs  mod.rs  network_tests.rs  radarr.rs  radarr_network.rs  radarr_network_tests.rs  servarr_test_utils.rs  sonarr_network.rs  sonarr_network_tests.rs  utils.rs
src/network/lidarr_network/: lidarr_network_test_utils.rs  lidarr_network_tests.rs  mod.rs
src/network/radarr_network/: mod.rs  radarr_network_test_utils.rs  radarr_network_tests.rs
src/network/sonarr_network/: mod.rs  sonarr_network_test_utils.rs  sonarr_network_tests.rs
src/ui/: builtin_themes.rs  builtin_themes_tests.rs  mod.rs  radarr_ui.rs  styles.rs  styles_tests.rs  theme.rs  theme_tests.rs  ui_property_tests.rs  ui_test_utils.rs  ui_tests.rs  utils.rs  utils_tests.rs
src/ui/lidarr_ui/: lidarr_ui_tests.rs  lidarr_ui_utils.rs  mod.rs  (+1 more)
tests/: enum_display_style_derive_integration_tests.rs  integration_test.rs  validate_theme_derive_integration_tests.rs
themes/: README.md
themes/default/: README.md  themes.yml
themes/dracula/: README.md  themes.yml
themes/eldritch/: README.md  themes.yml
themes/watermelon-dark/: README.md  themes.yml
(+520 files in other folders)
