[package]
name = "managarr"
version = "0.0.36"
authors = ["Alex Clarke <alex.j.tusa@gmail.com>"]
description = "A TUI and CLI to manage your Servarrs"
keywords = ["managarr", "tui-rs", "dashboard", "servarr", "tui"]
documentation = "https://github.com/Dark-Alex-17/managarr"
repository = "https://github.com/Dark-Alex-17/managarr"
homepage = "https://github.com/Dark-Alex-17/managarr"
readme = "README.md"
edition = "2021"
rust-version = "1.82.0"

[dependencies]
anyhow = "1.0.68"
backtrace = "0.3.67"
bimap = { version = "0.6.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
confy = { version = "0.6.0", default-features = false, features = [
  "yaml_conf",
] }
crossterm = "0.27.0"
derivative = "2.2.0"
human-panic = "1.1.3"
indoc = "2.0.0"
log = "0.4.17"
log4rs = { version = "1.2.0", features = ["file_appender"] }
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json"] }
serde_yaml = "0.9.16"
serde_json = "1.0.91"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.8"
ratatui = { version = "0.28.0", features = ["all-widgets"] }
urlencoding = "2.1.2"
clap = { version = "4.5.20", features = ["derive", "cargo"] }
clap_complete = "4.5.33"
itertools = "0.13.0"
ctrlc = "3.4.5"
colored = "2.1.0"
async-trait = "0.1.83"

[dev-dependencies]
assert_cmd = "2.0.16"
mockall = "0.13.0"
mockito = "1.0.0"
pretty_assertions = "1.3.0"
rstest = "0.18.2"

[[bin]]
bench = false
path = "src/main.rs"
name = "managarr"

[profile.release]
lto = true
codegen-units = 1
